Release 1.21.2-pre1 (snapshot)