@@ -1,53 +1,41 @@
+import com.google.common.collect.ImmutableSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.BiPredicate;
-import java.util.function.Predicate;
 
-public class cgb<T extends bwb> extends cgl<T> {
-   private final BiPredicate<T, bwb> a;
-   private final Predicate<T> b;
-   private final cff<Boolean> c;
-   private final int d;
+public class cgb extends cgp<bwf> {
+   private static final int a = 200;
+   private static final int b = 599;
 
-   public cgb(int $$0, BiPredicate<T, bwb> $$1, Predicate<T> $$2, cff<Boolean> $$3, int $$4) {
+   public cgb() {
+      this(200);
+   }
+
+   public cgb(int $$0) {
       super($$0);
-      this.a = $$1;
-      this.b = $$2;
-      this.c = $$3;
-      this.d = $$4;
    }
 
    @Override
-   protected void a(ash $$0, T $$1) {
-      if (!this.b.test($$1)) {
-         this.c($$1);
-      } else {
-         this.a($$1);
-      }
+   protected void a(ash $$0, bwf $$1) {
+      a($$1);
    }
 
    @Override
-   public Set<cff<?>> a() {
-      return Set.of(cff.g);
+   public Set<cfj<?>> a() {
+      return ImmutableSet.of(cfj.g);
    }
 
-   @Override
-   public void a(T $$0) {
-      Optional<List<bwb>> $$1 = $$0.eb().c(cff.g);
+   public static void a(bwf $$0) {
+      Optional<List<bwf>> $$1 = $$0.eb().c(cfj.g);
       if (!$$1.isEmpty()) {
-         boolean $$2 = $$1.get().stream().anyMatch($$1x -> this.a.test($$0, $$1x));
+         boolean $$2 = $$1.get().stream().anyMatch($$0x -> $$0x.aq().equals(bvq.aq));
          if ($$2) {
-            this.b($$0);
+            b($$0);
          }
       }
    }
 
-   public void b(T $$0) {
-      $$0.eb().a(this.c, true, (long)this.d);
-   }
-
-   public void c(T $$0) {
-      $$0.eb().b(this.c);
+   public static void b(bwf $$0) {
+      $$0.eb().a(cfj.F, true, 599L);
    }
 }
