@@ -4,267 +4,267 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class sr {
-   public static final aly<ega<?, ?>> a = sm.a("crimson_fungus");
-   public static final aly<ega<?, ?>> b = sm.a("crimson_fungus_planted");
-   public static final aly<ega<?, ?>> c = sm.a("warped_fungus");
-   public static final aly<ega<?, ?>> d = sm.a("warped_fungus_planted");
-   public static final aly<ega<?, ?>> e = sm.a("huge_brown_mushroom");
-   public static final aly<ega<?, ?>> f = sm.a("huge_red_mushroom");
-   public static final aly<ega<?, ?>> g = sm.a("oak");
-   public static final aly<ega<?, ?>> h = sm.a("dark_oak");
-   public static final aly<ega<?, ?>> i = sm.a("pale_oak");
-   public static final aly<ega<?, ?>> j = sm.a("pale_oak_creaking");
-   public static final aly<ega<?, ?>> k = sm.a("birch");
-   public static final aly<ega<?, ?>> l = sm.a("acacia");
-   public static final aly<ega<?, ?>> m = sm.a("spruce");
-   public static final aly<ega<?, ?>> n = sm.a("pine");
-   public static final aly<ega<?, ?>> o = sm.a("jungle_tree");
-   public static final aly<ega<?, ?>> p = sm.a("fancy_oak");
-   public static final aly<ega<?, ?>> q = sm.a("jungle_tree_no_vine");
-   public static final aly<ega<?, ?>> r = sm.a("mega_jungle_tree");
-   public static final aly<ega<?, ?>> s = sm.a("mega_spruce");
-   public static final aly<ega<?, ?>> t = sm.a("mega_pine");
-   public static final aly<ega<?, ?>> u = sm.a("super_birch_bees_0002");
-   public static final aly<ega<?, ?>> v = sm.a("super_birch_bees");
-   public static final aly<ega<?, ?>> w = sm.a("swamp_oak");
-   public static final aly<ega<?, ?>> x = sm.a("jungle_bush");
-   public static final aly<ega<?, ?>> y = sm.a("azalea_tree");
-   public static final aly<ega<?, ?>> z = sm.a("mangrove");
-   public static final aly<ega<?, ?>> A = sm.a("tall_mangrove");
-   public static final aly<ega<?, ?>> B = sm.a("cherry");
-   public static final aly<ega<?, ?>> C = sm.a("oak_bees_0002");
-   public static final aly<ega<?, ?>> D = sm.a("oak_bees_002");
-   public static final aly<ega<?, ?>> E = sm.a("oak_bees_005");
-   public static final aly<ega<?, ?>> F = sm.a("birch_bees_0002");
-   public static final aly<ega<?, ?>> G = sm.a("birch_bees_002");
-   public static final aly<ega<?, ?>> H = sm.a("birch_bees_005");
-   public static final aly<ega<?, ?>> I = sm.a("fancy_oak_bees_0002");
-   public static final aly<ega<?, ?>> J = sm.a("fancy_oak_bees_002");
-   public static final aly<ega<?, ?>> K = sm.a("fancy_oak_bees_005");
-   public static final aly<ega<?, ?>> L = sm.a("fancy_oak_bees");
-   public static final aly<ega<?, ?>> M = sm.a("cherry_bees_005");
+   public static final aly<egh<?, ?>> a = sm.a("crimson_fungus");
+   public static final aly<egh<?, ?>> b = sm.a("crimson_fungus_planted");
+   public static final aly<egh<?, ?>> c = sm.a("warped_fungus");
+   public static final aly<egh<?, ?>> d = sm.a("warped_fungus_planted");
+   public static final aly<egh<?, ?>> e = sm.a("huge_brown_mushroom");
+   public static final aly<egh<?, ?>> f = sm.a("huge_red_mushroom");
+   public static final aly<egh<?, ?>> g = sm.a("oak");
+   public static final aly<egh<?, ?>> h = sm.a("dark_oak");
+   public static final aly<egh<?, ?>> i = sm.a("pale_oak");
+   public static final aly<egh<?, ?>> j = sm.a("pale_oak_creaking");
+   public static final aly<egh<?, ?>> k = sm.a("birch");
+   public static final aly<egh<?, ?>> l = sm.a("acacia");
+   public static final aly<egh<?, ?>> m = sm.a("spruce");
+   public static final aly<egh<?, ?>> n = sm.a("pine");
+   public static final aly<egh<?, ?>> o = sm.a("jungle_tree");
+   public static final aly<egh<?, ?>> p = sm.a("fancy_oak");
+   public static final aly<egh<?, ?>> q = sm.a("jungle_tree_no_vine");
+   public static final aly<egh<?, ?>> r = sm.a("mega_jungle_tree");
+   public static final aly<egh<?, ?>> s = sm.a("mega_spruce");
+   public static final aly<egh<?, ?>> t = sm.a("mega_pine");
+   public static final aly<egh<?, ?>> u = sm.a("super_birch_bees_0002");
+   public static final aly<egh<?, ?>> v = sm.a("super_birch_bees");
+   public static final aly<egh<?, ?>> w = sm.a("swamp_oak");
+   public static final aly<egh<?, ?>> x = sm.a("jungle_bush");
+   public static final aly<egh<?, ?>> y = sm.a("azalea_tree");
+   public static final aly<egh<?, ?>> z = sm.a("mangrove");
+   public static final aly<egh<?, ?>> A = sm.a("tall_mangrove");
+   public static final aly<egh<?, ?>> B = sm.a("cherry");
+   public static final aly<egh<?, ?>> C = sm.a("oak_bees_0002");
+   public static final aly<egh<?, ?>> D = sm.a("oak_bees_002");
+   public static final aly<egh<?, ?>> E = sm.a("oak_bees_005");
+   public static final aly<egh<?, ?>> F = sm.a("birch_bees_0002");
+   public static final aly<egh<?, ?>> G = sm.a("birch_bees_002");
+   public static final aly<egh<?, ?>> H = sm.a("birch_bees_005");
+   public static final aly<egh<?, ?>> I = sm.a("fancy_oak_bees_0002");
+   public static final aly<egh<?, ?>> J = sm.a("fancy_oak_bees_002");
+   public static final aly<egh<?, ?>> K = sm.a("fancy_oak_bees_005");
+   public static final aly<egh<?, ?>> L = sm.a("fancy_oak_bees");
+   public static final aly<egh<?, ?>> M = sm.a("cherry_bees_005");
 
-   private static ejo.a a(dke $$0, dke $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new ejo.a(ekt.a($$0), new elx($$2, $$3, $$4), ekt.a($$1), new ejz(bsg.a($$5), bsg.a(0), 3), new ejw(1, 0, 1));
+   private static ejv.a a(dkl $$0, dkl $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new ejv.a(ela.a($$0), new eme($$2, $$3, $$4), ela.a($$1), new ekg(bsk.a($$5), bsk.a(0), 3), new ekd(1, 0, 1));
    }
 
-   private static ejo.a a() {
-      return a(dkg.X, dkg.aK, 4, 2, 0, 2).a();
+   private static ejv.a a() {
+      return a(dkn.X, dkn.aK, 4, 2, 0, 2).a();
    }
 
-   private static ejo.a b() {
-      return a(dkg.Z, dkg.aM, 5, 2, 0, 2).a();
+   private static ejv.a b() {
+      return a(dkn.Z, dkn.aM, 5, 2, 0, 2).a();
    }
 
-   private static ejo.a c() {
-      return a(dkg.Z, dkg.aM, 5, 2, 6, 2).a();
+   private static ejv.a c() {
+      return a(dkn.Z, dkn.aM, 5, 2, 6, 2).a();
    }
 
-   private static ejo.a d() {
-      return a(dkg.aa, dkg.aN, 4, 8, 0, 2);
+   private static ejv.a d() {
+      return a(dkn.aa, dkn.aN, 4, 8, 0, 2);
    }
 
-   private static ejo.a e() {
-      return new ejo.a(ekt.a(dkg.X), new elt(3, 11, 0), ekt.a(dkg.aK), new ekd(bsg.a(2), bsg.a(4), 4), new ejw(0, 0, 0, OptionalInt.of(4))).a();
+   private static ejv.a e() {
+      return new ejv.a(ela.a(dkn.X), new ema(3, 11, 0), ela.a(dkn.aK), new ekk(bsk.a(2), bsk.a(4), 4), new ekd(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static ejo.a f() {
-      return new ejo.a(
-            ekt.a(dkg.ac),
-            new elr(7, 1, 0, new bsq(brm.<bsj>a().a(bsg.a(1), 1).a(bsg.a(2), 1).a(bsg.a(3), 1).a()), bsp.a(2, 4), bsp.a(-4, -3), bsp.a(-1, 0)),
-            ekt.a(dkg.aP),
-            new ekb(bsg.a(4), bsg.a(0), bsg.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new ejw(1, 0, 2)
+   private static ejv.a f() {
+      return new ejv.a(
+            ela.a(dkn.ac),
+            new ely(7, 1, 0, new bsu(brq.<bsn>a().a(bsk.a(1), 1).a(bsk.a(2), 1).a(bsk.a(3), 1).a()), bst.a(2, 4), bst.a(-4, -3), bst.a(-1, 0)),
+            ela.a(dkn.aP),
+            new eki(bsk.a(4), bsk.a(0), bsk.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new ekd(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(rk<ega<?, ?>> $$0) {
-      jr<dke> $$1 = $$0.a(mb.f);
-      eep $$2 = eep.a(
-         dkg.z,
-         dkg.A,
-         dkg.B,
-         dkg.C,
-         dkg.D,
-         dkg.E,
-         dkg.F,
-         dkg.G,
-         dkg.H,
-         dkg.bY,
-         dkg.bZ,
-         dkg.ca,
-         dkg.cb,
-         dkg.cc,
-         dkg.cd,
-         dkg.ce,
-         dkg.cf,
-         dkg.cg,
-         dkg.ch,
-         dkg.ci,
-         dkg.cj,
-         dkg.ck,
-         dkg.cl,
-         dkg.cm,
-         dkg.cn,
-         dkg.cJ,
-         dkg.ef,
-         dkg.fp,
-         dkg.fq,
-         dkg.fr,
-         dkg.fs,
-         dkg.fA,
-         dkg.fE,
-         dkg.fQ,
-         dkg.gI,
-         dkg.gJ,
-         dkg.kP,
-         dkg.kQ,
-         dkg.kV,
-         dkg.kW,
-         dkg.kY,
-         dkg.oD,
-         dkg.oJ,
-         dkg.oS,
-         dkg.oU,
-         dkg.oV,
-         dkg.oW,
-         dkg.oX,
-         dkg.sQ,
-         dkg.sR,
-         dkg.sS,
-         dkg.sT,
-         dkg.sU,
-         dkg.sV,
-         dkg.sW,
-         dkg.sY,
-         dkg.sZ,
-         dkg.ta
+   public static void a(rk<egh<?, ?>> $$0) {
+      jr<dkl> $$1 = $$0.a(mb.f);
+      eew $$2 = eew.a(
+         dkn.z,
+         dkn.A,
+         dkn.B,
+         dkn.C,
+         dkn.D,
+         dkn.E,
+         dkn.F,
+         dkn.G,
+         dkn.H,
+         dkn.bY,
+         dkn.bZ,
+         dkn.ca,
+         dkn.cb,
+         dkn.cc,
+         dkn.cd,
+         dkn.ce,
+         dkn.cf,
+         dkn.cg,
+         dkn.ch,
+         dkn.ci,
+         dkn.cj,
+         dkn.ck,
+         dkn.cl,
+         dkn.cm,
+         dkn.cn,
+         dkn.cJ,
+         dkn.ef,
+         dkn.fp,
+         dkn.fq,
+         dkn.fr,
+         dkn.fs,
+         dkn.fA,
+         dkn.fE,
+         dkn.fQ,
+         dkn.gI,
+         dkn.gJ,
+         dkn.kP,
+         dkn.kQ,
+         dkn.kV,
+         dkn.kW,
+         dkn.kY,
+         dkn.oD,
+         dkn.oJ,
+         dkn.oS,
+         dkn.oU,
+         dkn.oV,
+         dkn.oW,
+         dkn.oX,
+         dkn.sQ,
+         dkn.sR,
+         dkn.sS,
+         dkn.sT,
+         dkn.sU,
+         dkn.sV,
+         dkn.sW,
+         dkn.sY,
+         dkn.sZ,
+         dkn.ta
       );
-      sm.a($$0, a, ego.V, new egx(dkg.oR.m(), dkg.oN.m(), dkg.lf.m(), dkg.oT.m(), $$2, false));
-      sm.a($$0, b, ego.V, new egx(dkg.oR.m(), dkg.oN.m(), dkg.lf.m(), dkg.oT.m(), $$2, true));
-      sm.a($$0, c, ego.V, new egx(dkg.oI.m(), dkg.oE.m(), dkg.oK.m(), dkg.oT.m(), $$2, false));
-      sm.a($$0, d, ego.V, new egx(dkg.oI.m(), dkg.oE.m(), dkg.oK.m(), dkg.oT.m(), $$2, true));
+      sm.a($$0, a, egv.V, new ehe(dkn.oR.m(), dkn.oN.m(), dkn.lf.m(), dkn.oT.m(), $$2, false));
+      sm.a($$0, b, egv.V, new ehe(dkn.oR.m(), dkn.oN.m(), dkn.lf.m(), dkn.oT.m(), $$2, true));
+      sm.a($$0, c, egv.V, new ehe(dkn.oI.m(), dkn.oE.m(), dkn.oK.m(), dkn.oT.m(), $$2, false));
+      sm.a($$0, d, egv.V, new ehe(dkn.oI.m(), dkn.oE.m(), dkn.oK.m(), dkn.oT.m(), $$2, true));
       sm.a(
          $$0,
          e,
-         ego.r,
-         new eiu(
-            ekt.a(dkg.fh.m().b(dod.f, Boolean.valueOf(true)).b(dod.g, Boolean.valueOf(false))),
-            ekt.a(dkg.fj.m().b(dod.f, Boolean.valueOf(false)).b(dod.g, Boolean.valueOf(false))),
+         egv.r,
+         new ejb(
+            ela.a(dkn.fh.m().b(dok.f, Boolean.valueOf(true)).b(dok.g, Boolean.valueOf(false))),
+            ela.a(dkn.fj.m().b(dok.f, Boolean.valueOf(false)).b(dok.g, Boolean.valueOf(false))),
             3
          )
       );
       sm.a(
          $$0,
          f,
-         ego.q,
-         new eiu(ekt.a(dkg.fi.m().b(dod.g, Boolean.valueOf(false))), ekt.a(dkg.fj.m().b(dod.f, Boolean.valueOf(false)).b(dod.g, Boolean.valueOf(false))), 2)
+         egv.q,
+         new ejb(ela.a(dkn.fi.m().b(dok.g, Boolean.valueOf(false))), ela.a(dkn.fj.m().b(dok.f, Boolean.valueOf(false)).b(dok.g, Boolean.valueOf(false))), 2)
       );
-      elh $$3 = new elh(0.002F);
-      elh $$4 = new elh(0.01F);
-      elh $$5 = new elh(0.02F);
-      elh $$6 = new elh(0.05F);
-      elh $$7 = new elh(1.0F);
-      sm.a($$0, g, ego.f, a().c());
+      elo $$3 = new elo(0.002F);
+      elo $$4 = new elo(0.01F);
+      elo $$5 = new elo(0.02F);
+      elo $$6 = new elo(0.05F);
+      elo $$7 = new elo(1.0F);
+      sm.a($$0, g, egv.f, a().c());
       sm.a(
          $$0,
          h,
-         ego.f,
-         new ejo.a(ekt.a(dkg.ad), new els(6, 2, 1), ekt.a(dkg.aQ), new ekc(bsg.a(0), bsg.a(0)), new ejv(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         egv.f,
+         new ejv.a(ela.a(dkn.ad), new elz(6, 2, 1), ela.a(dkn.aQ), new ekj(bsk.a(0), bsk.a(0)), new ekc(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
       sm.a(
          $$0,
          i,
-         ego.f,
-         new ejo.a(ekt.a(dkg.ae), new els(6, 2, 1), ekt.a(dkg.aR), new ekc(bsg.a(0), bsg.a(0)), new ejv(1, 1, 0, 1, 2, OptionalInt.empty()))
-            .a(ImmutableList.of(new ell(0.15F, 0.4F, 0.8F)))
+         egv.f,
+         new ejv.a(ela.a(dkn.ae), new elz(6, 2, 1), ela.a(dkn.aR), new ekj(bsk.a(0), bsk.a(0)), new ekc(1, 1, 0, 1, 2, OptionalInt.empty()))
+            .a(ImmutableList.of(new els(0.15F, 0.4F, 0.8F)))
             .a()
             .c()
       );
       sm.a(
          $$0,
          j,
-         ego.f,
-         new ejo.a(ekt.a(dkg.ae), new els(6, 2, 1), ekt.a(dkg.aR), new ekc(bsg.a(0), bsg.a(0)), new ejv(1, 1, 0, 1, 2, OptionalInt.empty()))
-            .a(ImmutableList.of(new ell(0.15F, 0.4F, 0.8F), new elj(1.0F)))
+         egv.f,
+         new ejv.a(ela.a(dkn.ae), new elz(6, 2, 1), ela.a(dkn.aR), new ekj(bsk.a(0), bsk.a(0)), new ekc(1, 1, 0, 1, 2, OptionalInt.empty()))
+            .a(ImmutableList.of(new els(0.15F, 0.4F, 0.8F), new elq(1.0F)))
             .a()
             .c()
       );
-      sm.a($$0, k, ego.f, b().c());
-      sm.a($$0, l, ego.f, new ejo.a(ekt.a(dkg.ab), new elu(5, 2, 2), ekt.a(dkg.aO), new ejy(bsg.a(2), bsg.a(0)), new ejw(1, 0, 2)).a().c());
-      sm.a($$0, B, ego.f, f().c());
-      sm.a($$0, M, ego.f, f().a(List.of($$6)).c());
-      sm.a($$0, m, ego.f, new ejo.a(ekt.a(dkg.Y), new elx(5, 2, 1), ekt.a(dkg.aL), new ekk(bsp.a(2, 3), bsp.a(0, 2), bsp.a(1, 2)), new ejw(2, 0, 2)).a().c());
-      sm.a($$0, n, ego.f, new ejo.a(ekt.a(dkg.Y), new elx(6, 4, 0), ekt.a(dkg.aL), new eki(bsg.a(1), bsg.a(1), bsp.a(3, 4)), new ejw(2, 0, 2)).a().c());
-      sm.a($$0, o, ego.f, d().a(ImmutableList.of(new eli(0.2F), elo.b, new elk(0.25F))).a().c());
-      sm.a($$0, p, ego.f, e().c());
-      sm.a($$0, q, ego.f, d().a().c());
+      sm.a($$0, k, egv.f, b().c());
+      sm.a($$0, l, egv.f, new ejv.a(ela.a(dkn.ab), new emb(5, 2, 2), ela.a(dkn.aO), new ekf(bsk.a(2), bsk.a(0)), new ekd(1, 0, 2)).a().c());
+      sm.a($$0, B, egv.f, f().c());
+      sm.a($$0, M, egv.f, f().a(List.of($$6)).c());
+      sm.a($$0, m, egv.f, new ejv.a(ela.a(dkn.Y), new eme(5, 2, 1), ela.a(dkn.aL), new ekr(bst.a(2, 3), bst.a(0, 2), bst.a(1, 2)), new ekd(2, 0, 2)).a().c());
+      sm.a($$0, n, egv.f, new ejv.a(ela.a(dkn.Y), new eme(6, 4, 0), ela.a(dkn.aL), new ekp(bsk.a(1), bsk.a(1), bst.a(3, 4)), new ekd(2, 0, 2)).a().c());
+      sm.a($$0, o, egv.f, d().a(ImmutableList.of(new elp(0.2F), elv.b, new elr(0.25F))).a().c());
+      sm.a($$0, p, egv.f, e().c());
+      sm.a($$0, q, egv.f, d().a().c());
       sm.a(
          $$0,
          r,
-         ego.f,
-         new ejo.a(ekt.a(dkg.aa), new elw(10, 2, 19), ekt.a(dkg.aN), new ekg(bsg.a(2), bsg.a(0), 2), new ejw(1, 1, 2))
-            .a(ImmutableList.of(elo.b, new elk(0.25F)))
+         egv.f,
+         new ejv.a(ela.a(dkn.aa), new emd(10, 2, 19), ela.a(dkn.aN), new ekn(bsk.a(2), bsk.a(0), 2), new ekd(1, 1, 2))
+            .a(ImmutableList.of(elv.b, new elr(0.25F)))
             .c()
       );
       sm.a(
          $$0,
          s,
-         ego.f,
-         new ejo.a(ekt.a(dkg.Y), new elv(13, 2, 14), ekt.a(dkg.aL), new ekh(bsg.a(0), bsg.a(0), bsp.a(13, 17)), new ejw(1, 1, 2))
-            .a(ImmutableList.of(new elf(ekt.a(dkg.l))))
+         egv.f,
+         new ejv.a(ela.a(dkn.Y), new emc(13, 2, 14), ela.a(dkn.aL), new eko(bsk.a(0), bsk.a(0), bst.a(13, 17)), new ekd(1, 1, 2))
+            .a(ImmutableList.of(new elm(ela.a(dkn.l))))
             .c()
       );
       sm.a(
          $$0,
          t,
-         ego.f,
-         new ejo.a(ekt.a(dkg.Y), new elv(13, 2, 14), ekt.a(dkg.aL), new ekh(bsg.a(0), bsg.a(0), bsp.a(3, 7)), new ejw(1, 1, 2))
-            .a(ImmutableList.of(new elf(ekt.a(dkg.l))))
+         egv.f,
+         new ejv.a(ela.a(dkn.Y), new emc(13, 2, 14), ela.a(dkn.aL), new eko(bsk.a(0), bsk.a(0), bst.a(3, 7)), new ekd(1, 1, 2))
+            .a(ImmutableList.of(new elm(ela.a(dkn.l))))
             .c()
       );
-      sm.a($$0, u, ego.f, c().a(ImmutableList.of($$3)).c());
-      sm.a($$0, v, ego.f, c().a(ImmutableList.of($$7)).c());
-      sm.a($$0, w, ego.f, a(dkg.X, dkg.aK, 5, 3, 0, 3).a(ImmutableList.of(new elk(0.25F))).c());
-      sm.a($$0, x, ego.f, new ejo.a(ekt.a(dkg.aa), new elx(1, 0, 0), ekt.a(dkg.aK), new eka(bsg.a(2), bsg.a(1), 2), new ejw(0, 0, 0)).c());
+      sm.a($$0, u, egv.f, c().a(ImmutableList.of($$3)).c());
+      sm.a($$0, v, egv.f, c().a(ImmutableList.of($$7)).c());
+      sm.a($$0, w, egv.f, a(dkn.X, dkn.aK, 5, 3, 0, 3).a(ImmutableList.of(new elr(0.25F))).c());
+      sm.a($$0, x, egv.f, new ejv.a(ela.a(dkn.aa), new eme(1, 0, 0), ela.a(dkn.aK), new ekh(bsk.a(2), bsk.a(1), 2), new ekd(0, 0, 0)).c());
       sm.a(
          $$0,
          y,
-         ego.f,
-         new ejo.a(
-               ekt.a(dkg.X),
-               new elq(4, 2, 0, 3, bsp.a(1, 2)),
-               new eld(brm.<dxn>a().a(dkg.aT.m(), 3).a(dkg.aU.m(), 1)),
-               new ekj(bsg.a(3), bsg.a(0), bsg.a(2), 50),
-               new ejw(1, 0, 1)
+         egv.f,
+         new ejv.a(
+               ela.a(dkn.X),
+               new elx(4, 2, 0, 3, bst.a(1, 2)),
+               new elk(brq.<dxu>a().a(dkn.aT.m(), 3).a(dkn.aU.m(), 1)),
+               new ekq(bsk.a(3), bsk.a(0), bsk.a(2), 50),
+               new ekd(1, 0, 1)
             )
-            .a(ekt.a(dkg.tc))
+            .a(ela.a(dkn.tc))
             .b()
             .c()
       );
       sm.a(
          $$0,
          z,
-         ego.f,
-         new ejo.a(
-               ekt.a(dkg.af),
-               new ema(2, 1, 4, bsp.a(1, 4), 0.5F, bsp.a(0, 1), $$1.b(axu.cm)),
-               ekt.a(dkg.aS),
-               new ekj(bsg.a(3), bsg.a(0), bsg.a(2), 70),
+         egv.f,
+         new ejv.a(
+               ela.a(dkn.af),
+               new emh(2, 1, 4, bst.a(1, 4), 0.5F, bst.a(0, 1), $$1.b(axu.cm)),
+               ela.a(dkn.aS),
+               new ekq(bsk.a(3), bsk.a(0), bsk.a(2), 70),
                Optional.of(
-                  new ekp(
-                     bsp.a(1, 3),
-                     ekt.a(dkg.ag),
-                     Optional.of(new ekn(ekt.a(dkg.sV), 0.5F)),
-                     new eko($$1.b(axu.cn), ju.a(dke::p, dkg.td, dkg.ah), ekt.a(dkg.ah), 8, 15, 0.2F)
+                  new ekw(
+                     bst.a(1, 3),
+                     ela.a(dkn.ag),
+                     Optional.of(new eku(ela.a(dkn.sV), 0.5F)),
+                     new ekv($$1.b(axu.cn), ju.a(dkl::p, dkn.td, dkn.ah), ela.a(dkn.ah), 8, 15, 0.2F)
                   )
                ),
-               new ejw(2, 0, 2)
+               new ekd(2, 0, 2)
             )
             .a(
                List.of(
-                  new elk(0.125F), new elg(0.14F, 1, 0, new ekz(ekt.a(dkg.H.m().b(dpb.d, Boolean.valueOf(true))), dpb.b, bsp.a(0, 4)), 2, List.of(jm.a)), $$4
+                  new elr(0.125F), new eln(0.14F, 1, 0, new elg(ela.a(dkn.H.m().b(dpi.d, Boolean.valueOf(true))), dpi.b, bst.a(0, 4)), 2, List.of(jm.a)), $$4
                )
             )
             .a()
@@ -273,39 +273,39 @@ public class sr {
       sm.a(
          $$0,
          A,
-         ego.f,
-         new ejo.a(
-               ekt.a(dkg.af),
-               new ema(4, 1, 9, bsp.a(1, 6), 0.5F, bsp.a(0, 1), $$1.b(axu.cm)),
-               ekt.a(dkg.aS),
-               new ekj(bsg.a(3), bsg.a(0), bsg.a(2), 70),
+         egv.f,
+         new ejv.a(
+               ela.a(dkn.af),
+               new emh(4, 1, 9, bst.a(1, 6), 0.5F, bst.a(0, 1), $$1.b(axu.cm)),
+               ela.a(dkn.aS),
+               new ekq(bsk.a(3), bsk.a(0), bsk.a(2), 70),
                Optional.of(
-                  new ekp(
-                     bsp.a(3, 7),
-                     ekt.a(dkg.ag),
-                     Optional.of(new ekn(ekt.a(dkg.sV), 0.5F)),
-                     new eko($$1.b(axu.cn), ju.a(dke::p, dkg.td, dkg.ah), ekt.a(dkg.ah), 8, 15, 0.2F)
+                  new ekw(
+                     bst.a(3, 7),
+                     ela.a(dkn.ag),
+                     Optional.of(new eku(ela.a(dkn.sV), 0.5F)),
+                     new ekv($$1.b(axu.cn), ju.a(dkl::p, dkn.td, dkn.ah), ela.a(dkn.ah), 8, 15, 0.2F)
                   )
                ),
-               new ejw(3, 0, 2)
+               new ekd(3, 0, 2)
             )
             .a(
                List.of(
-                  new elk(0.125F), new elg(0.14F, 1, 0, new ekz(ekt.a(dkg.H.m().b(dpb.d, Boolean.valueOf(true))), dpb.b, bsp.a(0, 4)), 2, List.of(jm.a)), $$4
+                  new elr(0.125F), new eln(0.14F, 1, 0, new elg(ela.a(dkn.H.m().b(dpi.d, Boolean.valueOf(true))), dpi.b, bst.a(0, 4)), 2, List.of(jm.a)), $$4
                )
             )
             .a()
             .c()
       );
-      sm.a($$0, C, ego.f, a().a(List.of($$3)).c());
-      sm.a($$0, D, ego.f, a().a(List.of($$5)).c());
-      sm.a($$0, E, ego.f, a().a(List.of($$6)).c());
-      sm.a($$0, F, ego.f, b().a(List.of($$3)).c());
-      sm.a($$0, G, ego.f, b().a(List.of($$5)).c());
-      sm.a($$0, H, ego.f, b().a(List.of($$6)).c());
-      sm.a($$0, I, ego.f, e().a(List.of($$3)).c());
-      sm.a($$0, J, ego.f, e().a(List.of($$5)).c());
-      sm.a($$0, K, ego.f, e().a(List.of($$6)).c());
-      sm.a($$0, L, ego.f, e().a(List.of($$7)).c());
+      sm.a($$0, C, egv.f, a().a(List.of($$3)).c());
+      sm.a($$0, D, egv.f, a().a(List.of($$5)).c());
+      sm.a($$0, E, egv.f, a().a(List.of($$6)).c());
+      sm.a($$0, F, egv.f, b().a(List.of($$3)).c());
+      sm.a($$0, G, egv.f, b().a(List.of($$5)).c());
+      sm.a($$0, H, egv.f, b().a(List.of($$6)).c());
+      sm.a($$0, I, egv.f, e().a(List.of($$3)).c());
+      sm.a($$0, J, egv.f, e().a(List.of($$5)).c());
+      sm.a($$0, K, egv.f, e().a(List.of($$6)).c());
+      sm.a($$0, L, egv.f, e().a(List.of($$7)).c());
    }
 }
